Bug Fix Release v5.1.1 (#292)
* MODFIN-421. (BF) Update financeData acq unit check to use fund only (#291)

* MODFIN-421. (BF) Cannot access batch edit screen and download batch allocation worksheet

* Update financeData acq unit check to use fund only

* Fix tests

---------

Co-authored-by: Azizbek Khushvakov <azizbek_khushvakov@epam.com>
(cherry picked from commit a44f0dffcecc393c61f90e6bfe500980b1f0c5a9)

* Update NEWS.md

* [maven-release-plugin] prepare release v5.1.1

* [maven-release-plugin] prepare for next development iteration

---------

Co-authored-by: Serhii Nosko <Serhii_Nosko@epam.com>